@@ -27,6 +27,7 @@ Copyright_License {
 #include "Util/StaticString.hpp"
 #include "Util/Macros.hpp"
 #include "Util/NumberParser.hpp"
+#include "NMEA/Checksum.hpp"
 
 void
 FlarmDevice::LinkTimeout()
@@ -200,6 +201,21 @@ FlarmDevice::GetConfig(const char *setting, char *buffer, size_t length,
   return Receive(expected_answer, buffer, length, env, 2000);
 }
 
+/**
+ * Read three bytes from the port: an asterisk and two hexadecimals
+ * comprising the given checksum.
+ */
+static bool
+ExpectChecksum(Port &port, uint8_t checksum, OperationEnvironment &env)
+{
+  char data[4];
+  if (!port.FullRead(data, 3, env, 500) || data[0] != '*')
+    return false;
+
+  data[3] = '\0';
+  return strtoul(data + 1, nullptr, 16) == checksum;
+}
+
 bool
 FlarmDevice::SetConfig(const char *setting, const char *value,
                        OperationEnvironment &env)
@@ -211,7 +227,8 @@ FlarmDevice::SetConfig(const char *setting, const char *value,
   expected_answer[6u] = 'A';
 
   Send(buffer, env);
-  return port.ExpectString(expected_answer, env, 2000);
+  return port.ExpectString(expected_answer, env, 2000) &&
+    ExpectChecksum(port, NMEAChecksum(expected_answer), env);
 }
 
 #ifdef _UNICODE
